syntax = "proto3";

option csharp_namespace = "GrpcService";

service UserGrpcService {
  rpc CreateUser (UserRequest) returns (UserResponse);
  rpc GetUsers (UserRequest) returns (UserResponse);
  rpc UpdateUser (UserRequest) returns (UserResponse);
  rpc DeleteUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  string Id = 1;
  string Name = 2;
  double Balance = 3;
  string CreatedAt = 4;
}

message User {
  string Id = 1;
  string Name = 2;
  double Balance = 3;
  string CreatedAt = 4;
}

message UserResponse {
  bool success = 1;
  User user = 2;
}
